# pyshellscript

./: .gitignore  LICENSE  LICENSE.txt  README.md  build_and_install.py  py_shell_script.py  pyproject.toml  pyshellscript.py  run_tests.py  todo.md
examples/: examples.py  test.py
pyshellscript/: __init__.py  pyshellscript.py  pyshellscript.systemd.py
tests/: tests_datetime.py  tests_files.py
tests/experiments/: cout_as_bash_test.py  os_scandir_test.py  process_pipe_api.py  std_in_out_pipe_as_bash_test.py  std_in_out_test.py  string_process_std_in_out_test.py
