[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshellscript"
# change in the "pyshellscript/pyshellscript.py" file: `def pyshellscript_version():`
# and run "build_and_install.py"
version = "0.5.3"
requires-python = ">=3.3"
description = "Library for shell scripting in Python"
authors = [{name = "heX", email = "hex1625616@gmail.com"}]
license = "MIT"
license-files = ["LICENSE.txt"]
readme = "README.md"
keywords = ["shell", "scripting", "system", "files", "processes", "utils"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "psutil>=5.5.0"
]

[project.urls]
Homepage = "https://github.com/heX16/pyshellscript"
Repository = "https://github.com/heX16/pyshellscript"
Issues = "https://github.com/heX16/pyshellscript/issues"

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "black",
  "isort"
]

[tool.black]
line-length = 88
target-version = ['py36']
